<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Petunjuk"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Peunjuk Penggunaan"
        android:textSize="20sp"
        android:layout_margin="20sp"
        android:gravity="center"
        android:fontFamily="casual"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petunjuk1"
            android:textSize="15sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="casual"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petunjuk2"
            android:textSize="15sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="casual"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petunjuk3"
            android:textSize="15sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="casual"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>