<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorTransparent"
        android:layout_margin="20sp"
        app:cardCornerRadius="15dp"
        android:elevation="10dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/h2"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:fontFamily="casual"
        android:layout_marginTop="15sp"
        android:textColor="@color/colorText2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/h3"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:fontFamily="casual"
        android:textColor="@color/colorText2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/h4"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:textColor="@color/colorText2"/>

    </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="30sp"
            android:layout_marginVertical="20sp">
            <LinearLayout
                android:id="@+id/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorButton"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/profile"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textSize="15dp"
                    android:fontFamily="casual"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="30sp"
            android:layout_marginVertical="20sp">
            <LinearLayout
                android:id="@+id/btnKD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorButton"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/kd"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KI dan KD"
                    android:textSize="15dp"
                    android:fontFamily="casual"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_gravity="center">
        <LinearLayout
            android:id="@+id/btnMulai"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/play"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mulai"
                android:textSize="15dp"
                android:fontFamily="casual"
                android:layout_gravity="center"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="30sp"
            android:layout_marginVertical="20sp">

            <LinearLayout
                android:id="@+id/btnPetunjuk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorButton"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/petunjuk"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Petunjuk"
                    android:textSize="15dp"
                    android:fontFamily="casual"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="30sp"
            android:layout_marginVertical="20sp">
        <LinearLayout
            android:id="@+id/btnKeluar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorButton"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/exit"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Keluar"
                android:textSize="15dp"
                android:fontFamily="casual"
                android:layout_gravity="center"/>

        </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>